Octane crashes with assert(is_Load())

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b96
    • Verified

      V [libjvm.so+0x84af61] Node::as_Load() const+0x53
      V [libjvm.so+0xaf836e] GraphKit::make_load(Node*, Node*, Type const*, BasicType, int, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool)+0x18e
      V [libjvm.so+0xb07201] GraphKit::make_load(Node*, Node*, Type const*, BasicType, TypePtr const*, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool)+0xed
      V [libjvm.so+0xd9e48b] LibraryCallKit::inline_unsafe_access(bool, bool, BasicType, bool, bool)+0xc6b
      V [libjvm.so+0xd946db] LibraryCallKit::try_to_inline(int)+0x4d5
      V [libjvm.so+0xd938ec] LibraryIntrinsic::generate(JVMState*)+0x170

      ILW=H(assert failure)M(seen only with octane)M(disable unsafe intrinsics)=P2

            Assignee:
            Roland Westrelin
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: