8142386: Octane crashes with assert(is_Load())

Unsafe access to an array is wrongly marked as mismatched

Reviewed-by: vlivanov, thartmann